# unamed-project

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  hestia.db  requirements.txt  update_rp.patch
.devcontainer/: setup.sh
.github/workflows/: ci.yml  docker-publish.yml
backend/: CMakeLists.txt
backend/include/: BKTEngine.hpp  MABEngine.hpp  PersistenceLayer.hpp  ResponseProcessor.hpp  ResponseProcessor.hpp.orig  SRSQueue.hpp  SessionManager.hpp  SkillGraph.hpp  ZoneBlender.hpp
backend/src/: BKTEngine.cpp  MABEngine.cpp  PersistenceLayer.cpp  ResponseProcessor.cpp  SRSQueue.cpp  SessionManager.cpp  SkillGraph.cpp  ZoneBlender.cpp  bindings.cpp  generate_session_report.cpp
backend/tests/: CMakeLists.txt  main.cpp  test_BKTEngine.cpp  test_MABEngine.cpp  test_PersistenceLayer.cpp  test_SRSQueue.cpp  test_SessionManager.cpp  test_ZoneBlender.cpp
data/: skill_graph.json
docs/: bkt-engine-arquitecture.md
frontend/: app.py
frontend/bridge/: hestia_bridge.py
jic/: .gitignore
scripts/: build.sh
scripts/migrations/: 001_initial_schema.sql  002_srs_persistence.sql  003_add_students_table.sql  004_add_indexes.sql  005_add_plearn_to_log.sql
simulation/: monte_carlo.cpp  stress_bot.cpp
